# snap

./: CMakeLists.txt  Makefile  TAGS
SNAPLib/: AlignerContext.cpp  AlignerContext.h  AlignerOptions.cpp  AlignerOptions.h  AlignerStats.cpp  Bam.cpp  Bam.h  BaseAligner.cpp  BaseAligner.h  BaseSeq.cpp  BaseSeq.h  BigAlloc.h  ChimericPairedEndAligner.cpp  Compat.cpp  Compat.h  DataReader.cpp  DataWriter.cpp  FASTA.cpp  FileFormat.cpp  FileFormat.h  GenericFile_Blob.cpp  GenericFile_map.cpp  Genome.cpp  Genome.h  GenomeIndex.cpp  GenomeIndex.h  GzipDataWriter.cpp  GzipDataWriter.h  HashTable.h  IntersectingPairedEndAligner.cpp  IntersectingPairedEndAligner.h  LandauVishkin.cpp  LandauVishkin.h  MultiInputReadSupplier.cpp  PairedAligner.cpp  PairedAligner.h  PairedReadMatcher.cpp  ParallelTask.cpp  ProbabilityDistance.h  RangeSplitter.cpp  (+22 more)
SNAPLib/TestMe.dSYM/Contents/Resources/DWARF/: TestMe
experiments/: 6_disk.sh  double_disk.sh  single_desk.sh  single_disk.sh
test_files/: single.fastq
